Updating news summary items

--- a/2024/2024-05-19.md
+++ b/2024/2024-05-19.md
@@ -8,27 +8,21 @@
 
 ### Week in Review: May 12-18, 2024
 
-- Bit crypto rally.
+- **Market wrap:** BTC, GameStop, inflation, etc.  https://www.coindesk.com/markets/2024/05/13/crypto-howls-as-circuit-breakers-restrain-red-hot-gamestop-rally/ | New Nasdaq record.
 
-- GameStop retreat.
-
-- McCourt bid to buy TikTok: https://www.nytimes.com/2024/05/15/business/frank-mccourt-tiktok-bid.html
-
-- Tornado Cash founder convicted of money laundering in the netherlands
+- **Washington watch:** Crypto bill progressing in Congress, with unlikely support from some Democrats who are rejecting Warren's anti-industry jihad. <!-- Links tk. This could also be a candidate for the lead item. -->
 
 - Vitalik proposes new gas structure. https://www.theblock.co/post/294274/vitalik-buterin-eip7706-ethereum-calldata-gas
 
-- new Comcast streaming bundle
+- Tornado Cash founder convicted of money laundering in the netherlands
 
-- meme stock rally https://www.coindesk.com/markets/2024/05/13/crypto-howls-as-circuit-breakers-restrain-red-hot-gamestop-rally/ | New Nasdaq record.
+- McCourt bid to buy TikTok: https://www.nytimes.com/2024/05/15/business/frank-mccourt-tiktok-bid.html
 
 ### Odds & Ends
 
-- https://www.coindesk.com/consensus-magazine/2024/04/16/what-the-history-of-linux-says-about-the-long-road-to-decentralized-storage-adoption/
+- **A team of AI researchers** from the University of Groningen in the Netherlands says it has created a bot that can detect sarcasm in sitcom episodes with 75% accuracy. ([Decrypt](https://decrypt.co/231125/sarcasm-detector-ai-trained-on-tv-research-paper))
 
-- https://slate.com/human-interest/2024/03/insomnia-cures-drug-free-sleeplessness-lewis-carroll-book.html
-
-- https://decrypt.co/231125/sarcasm-detector-ai-trained-on-tv-research-paper
+- **It was a scam about nothing, as all of them are.** A Brooklyn man pleaded guilty Thursday to federal wire fraud charges in connection with a scheme that bilked investors for $1.3 million. He said he was an expert in crypto and real estate who owned several companies. Among them: the non-existant Vandelay Contracting Corp., a riff on an old Seinfeld gag. ([CNBC](https://www.cnbc.com/2024/05/17/new-york-crypto-personality-used-seinfeld-joke-in-fraud.html))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
