--- a/2024/2024-05-19.md
+++ b/2024/2024-05-19.md
@@ -1,28 +1,48 @@
-# tktktk
-## tktktk
+# Finally, a good idea for fixing TikTok
+## Billionaire Frank McCourt is bidding to make the social app a proving ground for his nonprofit's pro-user, pro-democracy vision.
 
-![]()
-*Photo by tk via tk*
+![Frank McCourt onstage at the Web Summmit in Lisbon in late 2023](https://blog.pmckay.com/img/mccourt-websummit.jpg)
+*Frank McCourt during an onstage interview at Lisbon's Web Summit in November. Image by Web Summit via YouTube*
 
-<!-- Lede item tk. ~450 words. -->
+**I've previously registered** in this space my [deep concern](https://medium.com/@peteramckay/congress-isnt-going-to-fix-web2-7b1818ea9fc0) about a new U.S. law to force a sale of TikTok soon, or else ban the app in this country altogether. Threatening the latter is a First Amendment nightmare, in my opinion.
+
+Then the story got a notch worse when former U.S. Treasury Secretary (and former Goldman Sachs banker) Steve Mnuchin [announced an interest](https://www.msn.com/en-us/money/other/mnuchin-believes-tiktok-algorithm-could-be-rebuilt-if-he-buys-it/ar-BB1lZyWt) in buying TikTok's U.S. assets. If such a political insider were to end up the winning bidder, it would only further politicize a situation that really, really doesn't need it. And a Mnuchin acquisition could set up awful conflicts of interest at TikTok heading into November's presidential election and the next administration.  
+
+But on Wednesday we finally got a smidge of what I would call actual *good* news about TikTok: Frank McCourt, a billionaire and vocal Big Tech gadfly, [announced](https://www.projectliberty.io/news/frank-mccourt-organizing-a-people-s-bid-to-acquire-tiktok) that his nonprofit Project Liberty is organizing a "people's bid" for the social network.
+
+The idea would be to use TikTok to implement the more humane, pro-privacy, pro-democracy version of the internet that McCourt and Project Liberty have been [advocating](https://www.projectliberty.io/about) the last few years.
+
+On the technical side, Project Liberty promotes an open-source project called the [Decentralized Social Networking Protocol](https://dsnp.org/). McCourt's TikTok announcement didn't specifically mention DSNP, but that protocol is a high-percentage bet to become part of the app if whatever investment group McCourt assembles wins the bidding for TikTok.
+
+On a more layman-friendly note, I would highly recommend McCourt's recent book [Our Biggest Fight](https://ourbiggestfight.com/), co-authored with my former Dow Jones colleague Michael J. Casey. They do a truly exceptional job making issues like privacy, Big Tech's data collection, and its ill effects on society digestible for non-developers.
+
+The book is unabashedly a manifesto. But even if you don't agree with all McCourt's prescriptions, his discussion of the underlying illness is thought-provoking and well worth a read. In some way, we ultimately all have to deal with the issues he raises.
+
+It's also worth mentioning here that a lot of other people and organizations are working on the problem of building saner social networks than the ones Big Tech foists upon us. Alternatives include several blockchain-based social networks like [Mirror](https://mirror.xyz/), [Nostr](https://nostr.com/), and [Minds](https://www.minds.com/); as well as the federated [ActivityPub](https://activitypub.rocks/) protocol, which is the basis for the [Mastodon](https://joinmastodon.org/) social network.
+
+For better or worse, though, those were all recently built from scratch, with iteration ongoing. The prospect of taking an *existing*, centralized network like TikTok that already has millions of U.S. users and opening it up is a whole different proposition, tantalizing in its own way.  
+
+Maybe that's a bad thing. Maybe such a transition is impossible to pull off. Or perhaps it's such a crazy idea, it just might work. 😊
 
 ### Week in Review: May 12-18, 2024
 
-- **Market wrap:** BTC, GameStop, inflation, etc.  https://www.coindesk.com/markets/2024/05/13/crypto-howls-as-circuit-breakers-restrain-red-hot-gamestop-rally/ | New Nasdaq record.
+- **The U.S. Senate** voted to [end a controversial accounting regulation](https://www.coindesk.com/policy/2024/05/16/us-senate-votes-to-kill-secs-crypto-accounting-policy-testing-bidens-veto-threat/) that effectively makes it more difficult for banks to hold digital assets on clients' behalf. The bill now heads to the desk of President Biden, who has previously promised to veto it. But such a move faces increasing resistance within his own party, including 12 Senate Democrats who voted to overturn the accounting rule. Sen. Cory Booker [told Politico](https://www.politico.com/news/2024/05/17/crypto-congress-democrats-00158630) he wanted to "send a clear message" he's breaking with the administration's stridently anti-crypto stance.
 
-- **Washington watch:** Crypto bill progressing in Congress, with unlikely support from some Democrats who are rejecting Warren's anti-industry jihad. <!-- Links tk. This could also be a candidate for the lead item. -->
+- **Two senior executives departed ChatGPT maker OpenAI,** including co-founder and chief scientist Ilya Sutskekever and Jan Leike, who led the team responsible for user safety. In a [thread](https://x.com/janleike/status/1791498174659715494) on X, Leike said safety concerns around building generally intelligent AI have "taken a backseat to shiny products" at the startup. But Sutskever, who has [previously clashed](https://www.msn.com/en-us/money/careersandeducation/openai-chief-scientist-ilya-sutskever-is-leaving-but-what-did-he-see/ar-BB1mq7Bt) with CEO Sam Altman over safety, struck a more conciliatory tone as he departed. "I’m confident that OpenAI will build AGI that is both safe and beneficial," he said Tuesday in an [X post](https://x.com/ilyasut/status/1790517455628198322).
 
-- Vitalik proposes new gas structure. https://www.theblock.co/post/294274/vitalik-buterin-eip7706-ethereum-calldata-gas
+- **Bitcoin rallied** to its [highest price](https://decrypt.co/231289/bitcoin-booming-highest-price-since-halving) since its recent network "halving" event, posting a 7-day gain of 8% to trade above $66,000 per token in recent action. Other digital tokens and stocks were also higher, boosted by [tame U.S. inflation data](https://www.coindesk.com/business/2024/05/15/us-cpi-softer-than-expected-at-03-in-april-bitcoin-rises-to-635k/) that raised traders' hopes for rate cuts by the Federal Reserve. The S&P 500, Nasdaq Composite, and Dow Jones Industrial Average all [hit fresh records](https://www.kitco.com/news/off-the-wire/2024-05-16/sp-500-nasdaq-extend-record-streak-renewed-rate-cut-hopes) to post a [fifth straight week](https://www.cnbc.com/2024/05/16/stock-market-today-live-updates.html) of gains on Wall Street.
 
-- Tornado Cash founder convicted of money laundering in the netherlands
+- **Ethereum inventor Vitalik Buterin** has submitted a community proposal to change the network's fee structure, including a new category of transaction fee, known as "gas," for calldata. ([The Block](https://www.theblock.co/post/294274/vitalik-buterin-eip7706-ethereum-calldata-gas))
 
-- McCourt bid to buy TikTok: https://www.nytimes.com/2024/05/15/business/frank-mccourt-tiktok-bid.html
+- **Tornado Cash co-founder Alexey Pertsev** was convicted in a Dutch court of laundering $1.2 billion in stolen tokens. ([Wired](https://www.wired.com/story/tornado-cash-developer-found-guilty-of-laundering-crypto/))
+
+- **Binance compliance chief Tigran Gambaryan** was denied bail Friday in a Nigerian court, where he faces tax and money laundering charges. ([CoinDesk](https://www.coindesk.com/policy/2024/05/17/binance-exec-tigran-gambaryan-denied-bail-by-nigerian-court/))
 
 ### Odds & Ends
 
 - **A team of AI researchers** from the University of Groningen in the Netherlands says it has created a bot that can detect sarcasm in sitcom episodes with 75% accuracy. ([Decrypt](https://decrypt.co/231125/sarcasm-detector-ai-trained-on-tv-research-paper))
 
-- **It was a scam about nothing, as all of them are.** A Brooklyn man pleaded guilty Thursday to federal wire fraud charges in connection with a scheme that bilked investors for $1.3 million. He said he was an expert in crypto and real estate who owned several companies. Among them: the non-existant Vandelay Contracting Corp., a riff on an old Seinfeld gag. ([CNBC](https://www.cnbc.com/2024/05/17/new-york-crypto-personality-used-seinfeld-joke-in-fraud.html))
+- **It was a scam about nothing, as all of them are.** A Brooklyn man pleaded guilty Thursday to federal wire fraud charges after bilking investors for $1.3 million. He told them he owned several companies, including the nonexistent Vandelay Contracting Corp., a riff on an old Seinfeld gag. ([CNBC](https://www.cnbc.com/2024/05/17/new-york-crypto-personality-used-seinfeld-joke-in-fraud.html))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
