--- a/2024/2024-05-19.md
+++ b/2024/2024-05-19.md
@@ -2,7 +2,7 @@
 ## Billionaire Frank McCourt is bidding to make the social app a proving ground for his nonprofit's pro-user, pro-democracy vision.
 
 ![Frank McCourt onstage at the Web Summmit in Lisbon in late 2023](https://blog.pmckay.com/img/mccourt-websummit.jpg)
-*Frank McCourt during an onstage interview at Lisbon's Web Summit in November. Image by Web Summit via YouTube*
+*Frank McCourt speaking at Lisbon's Web Summit in November. Image by Web Summit via YouTube*
 
 **I've previously registered** in this space my [deep concern](https://medium.com/@peteramckay/congress-isnt-going-to-fix-web2-7b1818ea9fc0) about a new U.S. law to force a sale of TikTok soon, or else ban the app in this country altogether. Threatening the latter is a First Amendment nightmare, in my opinion.
 
@@ -20,7 +20,7 @@ The book is unabashedly a manifesto. But even if you don't agree with all McCour
 
 It's also worth mentioning here that a lot of other people and organizations are working on the problem of building saner social networks than the ones Big Tech foists upon us. Alternatives include several blockchain-based social networks like [Mirror](https://mirror.xyz/), [Nostr](https://nostr.com/), and [Minds](https://www.minds.com/); as well as the federated [ActivityPub](https://activitypub.rocks/) protocol, which is the basis for the [Mastodon](https://joinmastodon.org/) social network.
 
-For better or worse, though, those were all recently built from scratch, with iteration ongoing. The prospect of taking an *existing*, centralized network like TikTok that already has millions of U.S. users and opening it up is a whole different proposition, tantalizing in its own way.  
+For better or worse, though, those are all effectively building user bases from scratch, with software development ongoing as well. The prospect of taking an *existing*, centralized network like TikTok that already has millions of U.S. users and opening it up is a very different proposition, tantalizing in its own way.  
 
 Maybe that's a bad thing. Maybe such a transition is impossible to pull off. Or perhaps it's such a crazy idea, it just might work. 😊
 
