--- a/2024/2024-05-26.md
+++ b/2024/2024-05-26.md
@@ -14,8 +14,10 @@ Lede item. ~450 words. Do a CTA for sponsors. Craft offer as well to follow up i
 
 <!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
 
-- tk
-- tk
+- Grayscale CEO steps down. <!-- Need link. WSJ had early scoop, it seems. -->
+
+- **Britain's High Court ruled** that WikiLeaks founder Julian Assange can appeal extradition to the U.S., where he faces espionage charges. ([Washington Post](https://www.washingtonpost.com/world/2024/05/20/assange-appeal-extradition-court/)) <!-- Check for updates late in the week. -->
+
 - tk
 
 ### Odds & Ends
