--- a/2024/2024-05-26.md
+++ b/2024/2024-05-26.md
@@ -1,29 +1,99 @@
-# tktktk
-## tktktk
+# Four takeaways from crypto's big week in Washington
+## The industry hailed approval of an ether ETF and House passage of a new U.S. regulatory framework. What next?
 
-![A blank billboard](https://blog.pmckay.com/img/billboard-3840.jpg)
-*Illustration based on photo by Maria Kray via Pixabay*
+![The U.S. Capitol](https://blog.pmckay.com/img/heidi-kaden-3840.jpg)
+*Photo by Heidi Kaden via Unsplash*
 
-<!--
+<p><em>By Peter A. McKay</em></p>
 
-Lede item. ~450 words. Do a CTA for sponsors. Craft offer as well to follow up if/when msgs come in.
+<!-- Lede item. ~450 words. -->
 
--->
+A few months back, Pubkey. TKTK.
+
+The bitcoiner, a person who does have the wherewithal to make significant contributions, was offended as he recounted this story. He was trying to talk right and wrong, fair and unfair, but the elected official just wanted to talk campaign cash.
+
+He hasn't given a dollar, according to OpenSecrets.
+
+
+
+
+
+
+**If you're a fan of crypto,** recent events in Washington are hugely encouraging. If you're a fan of U.S. democracy, they're dispiriting.
+
+If you're a fan of both, as I am, you have mixed feelings. The above interests don't necessarily have to be a trade-off, but somehow we've managed to make them so here in the U.S.
+
+- The SEC's "war on crypto" has inadvertently had the effect of strengthening its dominant duopoly of Bitcoin and Ethereum.
+
+- The public is mostly tuned out.
+
+- Increased donations and lobbying are paying off for the industry. This is an awful game, but the crypto industry is getting much better at it, for better or worse.
+
+- Election-year politicking is helping, not hurting, crypto. Both major-party candidates are signaling detente with the industry.
+
+
+
+https://www.coindesk.com/opinion/2024/05/24/3-questions-about-the-secs-abrupt-eth-etf-approval/
+
+
+Well, look at that.
+
+Crypto racked up some big wins in Washington.
+
+ETH ETF approved! <!-- Need link -->
+
+New House bill would delineate where SEC has authority, where CFTC does. But it's unlikely to pass the Senate, Bloomberg says.
+
+CoinDesk coverage of ETH fund approval: https://www.coindesk.com/markets/2024/05/23/sec-approves-spot-ether-etf-listing-still-needs-to-approve-products/
+
+Straight news story on FIT21 passage: https://www.reuters.com/world/us/us-securities-regulator-urges-against-crypto-bill-adoption-2024-05-22/
+
+https://www.politico.com/news/2024/05/23/crypto-2024-election-impact-00159506
+
+https://www.washingtonpost.com/business/2024/05/25/crypto-lobbying-politics-washington/
+
+https://www.coindesk.com/opinion/2024/05/24/the-unintended-consequences-of-fit21s-crypto-market-structure-bill/
+
+https://www.barrons.com/articles/bitcoin-ethereum-price-crypto-markets-today-adfbca77
+
+New op-ed co-written by Sheila Warren: https://fortune.com/crypto/2024/05/18/the-clock-is-ticking-for-democrats-on-crypto/
 
 ### Week in Review: May 19-25, 2024
 
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
-
 - Grayscale CEO steps down. <!-- Need link. WSJ had early scoop, it seems. -->
+
+
+- Scarjo dispute with OpenAI: https://slate.com/technology/2024/05/scarlett-johansson-ai-voice-sam-altman-openai.html
+
+- Nvida earnings. <!-- Pickup links -->
+
+- Google is making AI-fueled changes that will likely spell bad news for publishers. https://www.platformer.news/google-io-ai-search-sundar-pichai/ | - **That math seems a little "off," no?** https://x.com/Mantzarlis/status/1793598252216107238
+
+- https://crypto.news/telegram-mini-apps-skyrocket-with-web3-games-adding-millions-of-users-daily/
+
+- https://www.coindesk.com/consensus-magazine/2024/05/24/the-untold-story-behind-beeples-historic-nft-sale-token-supremacy-excerpt/
+
+- https://techcrunch.com/2024/05/25/deal-dive-can-blockchain-make-weather-forecasts-better-weatherxm-thinks-so/
+
+- **Misadventures in social moderation:** https://techcrunch.com/2024/05/14/on-elons-whim-x-now-treats-cisgender-as-a-slur/ TikTok crackdown on weight loss influencers. Huh? https://www.washingtonpost.com/business/2024/05/20/tiktok-ozempic-weight-loss-body-shaming/
 
 - **Britain's High Court ruled** that WikiLeaks founder Julian Assange can appeal extradition to the U.S., where he faces espionage charges. ([Washington Post](https://www.washingtonpost.com/world/2024/05/20/assange-appeal-extradition-court/)) <!-- Check for updates late in the week. -->
 
-- tk
+- **Design companies** are still failing at diversity. ([Fast Company](https://www.fastcompany.com/91126539/design-companies-are-still-failing-at-diversity-heres-how-the-industry-can-build-a-better-pipeline))
+
+- https://www.nytimes.com/2024/05/23/health/cyberattack-ascension-hospitals-patient-data.html
 
 ### Odds & Ends
 
-- tk
-- tk
+- https://slate.com/technology/2024/05/apple-100-best-albums-list-crush-commercial-downfall.html
+
+- https://www.space.com/alien-45th-anniversary-opening-day-1979
+
+- https://www.coindesk.com/business/2024/05/24/kabosu-dog-who-inspired-dogecoin-and-shiba-inu-is-no-more/
+
+<!--
+
+Re-work boilerplate to include a donation CTA via Bitcoin, Cash, and Venmo.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
@@ -34,3 +104,5 @@ _**If you would like to reach me directly with a story suggestion or anything el
 _**Best wishes for a healthy and productive week ahead.**_  
 
 _**-- Peter A. McKay**_  
+
+-->
