--- a/2024/2024-06-09.md
+++ b/2024/2024-06-09.md
@@ -1,19 +1,14 @@
 # tktktk
 ## tktktk
 
-![A blank billboard](https://blog.pmckay.com/img/billboard-3840.jpg)
-*Illustration based on photo by Maria Kray via Pixabay*
+![Zane Witherspoon and Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
+*Zane Witherspoon and Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
 
 <p><em>By Peter A. McKay</em></p>
 
+<!-- Lede item. Should run ~450 words. -->
 
-<!--
-
-Lede item. ~450 words. Do a CTA for sponsors. Craft offer as well to follow up if/when msgs come in.
-
--->
-
-### Week in Review: May 26 to June 1, 2024
+### Week in Review: June 2-8, 2024
 
 <!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
 
@@ -23,13 +18,14 @@ Lede item. ~450 words. Do a CTA for sponsors. Craft offer as well to follow up i
 
 ### Odds & Ends
 
-- A rant about web3 marketing: https://www.coindesk.com/opinion/2024/05/23/wake-up-web3-your-marketing-is-fueling-a-bot-epidemic/
-
+- tk
 - tk
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
-_**Have a comment on the newsletter? Please share it with the hashtag #w3w on your favorite social network. We'll continue the conversation there.**_ 😉
+_**Have a comment on the newsletter? Plea
+<p><em>By Peter A. McKay</em></p>
+se share it with the hashtag #w3w on your favorite social network. We'll continue the conversation there.**_ 😉
 
 _**If you would like to reach me directly with a story suggestion or anything else, please email peter[at]w3w.media.**_
 
