Highlighting must-run summary items

--- a/2024/2024-05-26.md
+++ b/2024/2024-05-26.md
@@ -1,23 +1,18 @@
 # Four takeaways from crypto's big week in Washington
-## The industry hailed approval of an ether ETF and House passage of a new U.S. regulatory framework. What next?
+## Fans hailed approval of an ether ETF and House passage of clearer rules for U.S. trading. What next?
 
 ![The U.S. Capitol](https://blog.pmckay.com/img/heidi-kaden-3840.jpg)
 *Photo by Heidi Kaden via Unsplash*
 
 <p><em>By Peter A. McKay</em></p>
 
-<!-- Lede item. ~450 words. -->
+<!-- Lede item. ~450 words.
 
 A few months back, Pubkey. TKTK.
 
 The bitcoiner, a person who does have the wherewithal to make significant contributions, was offended as he recounted this story. He was trying to talk right and wrong, fair and unfair, but the elected official just wanted to talk campaign cash.
 
 He hasn't given a dollar, according to OpenSecrets.
-
-
-
-
-
 
 **If you're a fan of crypto,** recent events in Washington are hugely encouraging. If you're a fan of U.S. democracy, they're dispiriting.
 
@@ -40,7 +35,7 @@ Well, look at that.
 
 Crypto racked up some big wins in Washington.
 
-ETH ETF approved! <!-- Need link -->
+ETH ETF approved! <!-- Need link
 
 New House bill would delineate where SEC has authority, where CFTC does. But it's unlikely to pass the Senate, Bloomberg says.
 
@@ -58,16 +53,15 @@ https://www.barrons.com/articles/bitcoin-ethereum-price-crypto-markets-today-adf
 
 New op-ed co-written by Sheila Warren: https://fortune.com/crypto/2024/05/18/the-clock-is-ticking-for-democrats-on-crypto/
 
+-->
+
 ### Week in Review: May 19-25, 2024
 
 - Grayscale CEO steps down. <!-- Need link. WSJ had early scoop, it seems. -->
 
-
 - Scarjo dispute with OpenAI: https://slate.com/technology/2024/05/scarlett-johansson-ai-voice-sam-altman-openai.html
 
 - Nvida earnings. <!-- Pickup links -->
-
-- Google is making AI-fueled changes that will likely spell bad news for publishers. https://www.platformer.news/google-io-ai-search-sundar-pichai/ | - **That math seems a little "off," no?** https://x.com/Mantzarlis/status/1793598252216107238
 
 - https://crypto.news/telegram-mini-apps-skyrocket-with-web3-games-adding-millions-of-users-daily/
 
@@ -81,7 +75,14 @@ New op-ed co-written by Sheila Warren: https://fortune.com/crypto/2024/05/18/the
 
 - **Design companies** are still failing at diversity. ([Fast Company](https://www.fastcompany.com/91126539/design-companies-are-still-failing-at-diversity-heres-how-the-industry-can-build-a-better-pipeline))
 
+
+<!--
+
+- Google is making AI-fueled changes that will likely spell bad news for publishers. https://www.platformer.news/google-io-ai-search-sundar-pichai/ | - **That math seems a little "off," no?** https://x.com/Mantzarlis/status/1793598252216107238
+
 - https://www.nytimes.com/2024/05/23/health/cyberattack-ascension-hospitals-patient-data.html
+
+-->
 
 ### Odds & Ends
 
