--- a/2024/2024-05-26.md
+++ b/2024/2024-05-26.md
@@ -1,47 +1,43 @@
 # Four takeaways from crypto's big week in Washington
-## Fans hailed approval of an ether ETF and House passage of clearer rules for U.S. trading. What next?
+## Congress and the SEC just handed the industry a pair of major wins. What next?
 
 ![The U.S. Capitol](https://blog.pmckay.com/img/heidi-kaden-3840.jpg)
 *Photo by Heidi Kaden via Unsplash*
 
 <p><em>By Peter A. McKay</em></p>
 
-<!-- Lede item. ~450 words.
+**For a change,** crypto world has been getting nothing but welcome news from America's government.
 
-A few months back, Pubkey. TKTK.
+- **On Monday,** the Securities and Exchange Commission gave its [approval](https://www.reuters.com/technology/us-sec-approves-exchange-applications-list-spot-ether-etfs-2024-05-23/) for public exchanges in the U.S. to list funds holding ether on investors' behalf. To be sure, the SEC still has to [issue a second approval](https://www.coindesk.com/markets/2024/05/23/sec-approves-spot-ether-etf-listing-still-needs-to-approve-products/) for *issuers* of ether ETFs to sell shares to the public. But a path now seems clear for investors to begin using such vehicles sometime this year to bet on the token market's second-most popular token via their accounts with traditional stockbrokers.
+- **On Wednesday,** [the U.S. House passed](https://www.reuters.com/world/us/us-securities-regulator-urges-against-crypto-bill-adoption-2024-05-22/) the Financial Innovation and Technology for the 21st Century Act in a bipartisan 279-136 vote. The bill, nicknamed FIT21, seeks to clarify rules for U.S. crypto trading and the enforcement powers delegated to different financial agencies.  
 
-The bitcoiner, a person who does have the wherewithal to make significant contributions, was offended as he recounted this story. He was trying to talk right and wrong, fair and unfair, but the elected official just wanted to talk campaign cash.
+**Why it matters:** The week signaled just how much things have changed in Washington since the immediate post-FTX period, when the SEC unleashed a wave of enforcement actions against crypto companies.
 
-He hasn't given a dollar, according to OpenSecrets.
+In the absence of new laws tailored to the crypto economy, the SEC was accused by insiders of practicing "rulemaking by enforcement." That is to say, it would bring legal actions against crypto entities under decades-old securities laws written for Wall Street, see what it could get federal judges to agree to in court, and thus set precedent governing the industry going forward.
 
-**If you're a fan of crypto,** recent events in Washington are hugely encouraging. If you're a fan of U.S. democracy, they're dispiriting.
+That approach garnered [a mixed record](https://www.msn.com/en-us/money/other/court-rules-in-favor-of-grayscale-over-sec-raising-hopes-for-bitcoin-etf-approval/ar-AA1fX1vy) in the courtroom and now seems to have dwindling political support on Capitol Hill as well.
 
-If you're a fan of both, as I am, you have mixed feelings. The above interests don't necessarily have to be a trade-off, but somehow we've managed to make them so here in the U.S.
+Reading between the lines, a few other importan lessons and trends that stand out to me right now:
 
-- The SEC's "war on crypto" has inadvertently had the effect of strengthening its dominant duopoly of Bitcoin and Ethereum.
+**1) The SEC's "war on crypto" has inadvertently had the effect of strengthening crypto's dominant duopoly of Bitcoin and Ethereum.**
 
-- The public is mostly tuned out.
+Market dominance TKTKTK.
 
-- Increased donations and lobbying are paying off for the industry. This is an awful game, but the crypto industry is getting much better at it, for better or worse.
+**2) The public is mostly tuned out.**
 
-- Election-year politicking is helping, not hurting, crypto. Both major-party candidates are signaling detente with the industry.
+TKTKT Fed survey numbers.
 
+**3) Increased donations and lobbying are paying off for the industry.**
 
+Sadly, it's probably not coincidental that House passage of FIT21 follows an increase in campaign donations by crypto-related political action committees (PACs).
 
-https://www.coindesk.com/opinion/2024/05/24/3-questions-about-the-secs-abrupt-eth-etf-approval/
+This is an awful game in Washington, but the crypto industry is clearly getting much better at it, for better or worse.
 
+**4) Election-year politicking is helping, not hurting, crypto.**
 
-Well, look at that.
+Both major-party candidates are signaling detente with the industry.
 
-Crypto racked up some big wins in Washington.
-
-ETH ETF approved! <!-- Need link
-
-New House bill would delineate where SEC has authority, where CFTC does. But it's unlikely to pass the Senate, Bloomberg says.
-
-CoinDesk coverage of ETH fund approval: https://www.coindesk.com/markets/2024/05/23/sec-approves-spot-ether-etf-listing-still-needs-to-approve-products/
-
-Straight news story on FIT21 passage: https://www.reuters.com/world/us/us-securities-regulator-urges-against-crypto-bill-adoption-2024-05-22/
+Robert F. Kennedy Jr. pro-bitcoin speech.
 
 https://www.politico.com/news/2024/05/23/crypto-2024-election-impact-00159506
 
@@ -53,48 +49,21 @@ https://www.barrons.com/articles/bitcoin-ethereum-price-crypto-markets-today-adf
 
 New op-ed co-written by Sheila Warren: https://fortune.com/crypto/2024/05/18/the-clock-is-ticking-for-democrats-on-crypto/
 
--->
-
 ### Week in Review: May 19-25, 2024
-
-- Grayscale CEO steps down. <!-- Need link. WSJ had early scoop, it seems. -->
-
-- Scarjo dispute with OpenAI: https://slate.com/technology/2024/05/scarlett-johansson-ai-voice-sam-altman-openai.html
-
-- Nvida earnings. <!-- Pickup links -->
-
-- https://crypto.news/telegram-mini-apps-skyrocket-with-web3-games-adding-millions-of-users-daily/
-
-- https://www.coindesk.com/consensus-magazine/2024/05/24/the-untold-story-behind-beeples-historic-nft-sale-token-supremacy-excerpt/
-
-- https://techcrunch.com/2024/05/25/deal-dive-can-blockchain-make-weather-forecasts-better-weatherxm-thinks-so/
-
-- **Misadventures in social moderation:** https://techcrunch.com/2024/05/14/on-elons-whim-x-now-treats-cisgender-as-a-slur/ TikTok crackdown on weight loss influencers. Huh? https://www.washingtonpost.com/business/2024/05/20/tiktok-ozempic-weight-loss-body-shaming/
-
-- **Britain's High Court ruled** that WikiLeaks founder Julian Assange can appeal extradition to the U.S., where he faces espionage charges. ([Washington Post](https://www.washingtonpost.com/world/2024/05/20/assange-appeal-extradition-court/)) <!-- Check for updates late in the week. -->
-
+- **Grayscale Investments CEO Michael Sonnenshein stepped down.** Peter Mintzberg, who was global head for the crypto asset-management giant, will take over as chief executive. His work is cut out for him as Grayscale has recently seen heavy outflows of investor money into competitors' listed bitcoin funds. ([Wall Street Journal](https://www.wsj.com/finance/grayscale-ceo-michael-sonnenshein-steps-down-bc0680dc?st=7mrmyfcrcmjbann&reflink=desktopwebshare_permalink))
+- **Actress Scarlett Johansson** accused OpenAI of emulating her voice without permission for a new voice assistant dubbed "Sky." The company immediately removed "Sky" from its new text-to-video app but claims it never intended to mimic Johansson. ([Reuters](https://www.reuters.com/technology/scarlett-johanssons-openai-feud-rekindles-hollywood-fear-artificial-intelligence-2024-05-23/))
+- **Chipmaker Nvidia** announced a sevenfold increase in fiscal first-quarter earnings, fueled by strong sales of components tailored for AI applications. The news pushed Nvidia stock above $1,000 a share for the first time, and the company's total valuation is now above $2.6 trillion, putting it in the "Magnificent Seven" club of U.S. tech giants. ([CNBC](https://www.cnbc.com/2024/05/22/nvidia-nvda-earnings-report-q1-2025-.html))
+- **Misadventures in social moderation:** At Elon Musk's direction, Twitter moderators are now treating the terms "cis" and "cisgender" [as slurs](https://techcrunch.com/2024/05/14/on-elons-whim-x-now-treats-cisgender-as-a-slur/), even as they often allow other epithets to remain on the platform. Meanwhile, TikTok is [cracking down](https://www.washingtonpost.com/business/2024/05/20/tiktok-ozempic-weight-loss-body-shaming/) on... weight-loss influencers?
+- **Britain's High Court ruled** that WikiLeaks founder Julian Assange can appeal extradition to the U.S., where he faces espionage charges. ([Washington Post](https://www.washingtonpost.com/world/2024/05/20/assange-appeal-extradition-court/))
+- **Text-based "mini apps" on Telegram** are drawing increased usage, an important milestone for the TON chain. One standout: Hamster Kombat, a crypto exchange CEO simulator game, has garnered 19 million daily active users. ([Crypto.news](https://crypto.news/telegram-mini-apps-skyrocket-with-web3-games-adding-millions-of-users-daily/))
+- **CoinDesk published** an excerpt of [Token Supremacy](https://www.amazon.com/dp/0593536754?ref_=nb_sb_ss_w_aud-kwd-crossbookcover-wdg_bks-1_k0_3_14&amp=&amp=), reporter Zachary Small's new book about the digital art world. In [the excerpt](https://www.coindesk.com/consensus-magazine/2024/05/24/the-untold-story-behind-beeples-historic-nft-sale-token-supremacy-excerpt/), Small offers a fly-on-the-wall account of the artist Mike Winkelmann, known as Beeple, watching an auction of his work as a non-fungible token in 2021 via Christie's. The sale made Winkelmann an instant multimillionaire.
+- **Startup WeatherXM** is building a global network of community-monitored weather stations that share data on-chain to improve the accuracy of forecasts. ([TechCrunch](https://techcrunch.com/2024/05/25/deal-dive-can-blockchain-make-weather-forecasts-better-weatherxm-thinks-so/))
 - **Design companies** are still failing at diversity. ([Fast Company](https://www.fastcompany.com/91126539/design-companies-are-still-failing-at-diversity-heres-how-the-industry-can-build-a-better-pipeline))
 
-
-<!--
-
-- Google is making AI-fueled changes that will likely spell bad news for publishers. https://www.platformer.news/google-io-ai-search-sundar-pichai/ | - **That math seems a little "off," no?** https://x.com/Mantzarlis/status/1793598252216107238
-
-- https://www.nytimes.com/2024/05/23/health/cyberattack-ascension-hospitals-patient-data.html
-
--->
-
 ### Odds & Ends
-
-- https://slate.com/technology/2024/05/apple-100-best-albums-list-crush-commercial-downfall.html
-
-- https://www.space.com/alien-45th-anniversary-opening-day-1979
-
-- https://www.coindesk.com/business/2024/05/24/kabosu-dog-who-inspired-dogecoin-and-shiba-inu-is-no-more/
-
-<!--
-
-Re-work boilerplate to include a donation CTA via Bitcoin, Cash, and Venmo.
+- **Slate's Nitish Pahwa** argues that Apple Music's new [100 Best Albums](https://100best.music.apple.com/us) list is emblematic of a [general decline](https://slate.com/technology/2024/05/apple-100-best-albums-list-crush-commercial-downfall.html) in the giant's previously stellar marketing.
+- **Sci-fi and horror fans** marked the 45th anniversary of the release of Ridley Scott's masterpiece Alien on Saturday. ([Space.com](https://www.space.com/alien-45th-anniversary-opening-day-1979))
+- **Farewell, good dog.** Kabosu, a Japanese shiba inu whose quizzical expression became the logo of the Dogecoin token, passed away peacefully at the age of 17 on Friday. ([CNBC](https://www.nbcnews.com/news/world/kabosu-dog-doge-internet-meme-died-rcna4472))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
@@ -102,8 +71,4 @@ _**Have a comment on the newsletter? Please share it with the hashtag #w3w on yo
 
 _**If you would like to reach me directly with a story suggestion or anything else, please email peter[at]w3w.media.**_
 
-_**Best wishes for a healthy and productive week ahead.**_  
-
-_**-- Peter A. McKay**_  
-
--->
+_**Best wishes for a healthy and productive week ahead.**_
