--- a/2024/2024-06-02.md
+++ b/2024/2024-06-02.md
@@ -27,6 +27,9 @@ Lede item. ~450 words. Do a CTA for sponsors. Craft offer as well to follow up i
 
 - tk
 
+<!-- Re-work boilerplate to include a donation CTA via Bitcoin, Cash, and Venmo.
+
+
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
 _**Have a comment on the newsletter? Please share it with the hashtag #w3w on your favorite social network. We'll continue the conversation there.**_ 😉
@@ -35,4 +38,4 @@ _**If you would like to reach me directly with a story suggestion or anything el
 
 _**Best wishes for a healthy and productive week ahead.**_  
 
-_**-- Peter A. McKay**_  
+-->
