--- a/2024/2024-06-09.md
+++ b/2024/2024-06-09.md
@@ -21,14 +21,4 @@
 - tk
 - tk
 
-_**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
-
-_**Have a comment on the newsletter? Plea
-<p><em>By Peter A. McKay</em></p>
-se share it with the hashtag #w3w on your favorite social network. We'll continue the conversation there.**_ 😉
-
-_**If you would like to reach me directly with a story suggestion or anything else, please email peter[at]w3w.media.**_
-
-_**Best wishes for a healthy and productive week ahead.**_  
-
-_**-- Peter A. McKay**_  
+<!-- Pickup boilerplate from last week -->
