Edits to lede item

--- a/2024/2024-05-26.md
+++ b/2024/2024-05-26.md
@@ -1,5 +1,5 @@
-# Four takeaways from crypto's big week in Washington
-## Congress and the SEC just handed the industry a pair of major wins. What next?
+# The "war on crypto" backfired.
+## A pair of big wins in Washington for the industry underscores what went wrong with the SEC's post-FTX crackdown
 
 ![The U.S. Capitol](https://blog.pmckay.com/img/heidi-kaden-3840.jpg)
 *Photo by Heidi Kaden via Unsplash*
@@ -11,43 +11,33 @@
 - **On Monday,** the Securities and Exchange Commission gave its [approval](https://www.reuters.com/technology/us-sec-approves-exchange-applications-list-spot-ether-etfs-2024-05-23/) for public exchanges in the U.S. to list funds holding ether on investors' behalf. To be sure, the SEC still has to [issue a second approval](https://www.coindesk.com/markets/2024/05/23/sec-approves-spot-ether-etf-listing-still-needs-to-approve-products/) for *issuers* of ether ETFs to sell shares to the public. But a path now seems clear for investors to begin using such vehicles sometime this year to bet on the token market's second-most popular token via their accounts with traditional stockbrokers.
 - **On Wednesday,** [the U.S. House passed](https://www.reuters.com/world/us/us-securities-regulator-urges-against-crypto-bill-adoption-2024-05-22/) the Financial Innovation and Technology for the 21st Century Act in a bipartisan 279-136 vote. The bill, nicknamed FIT21, seeks to clarify rules for U.S. crypto trading and the enforcement powers delegated to different financial agencies.  
 
-**Why it matters:** The week signaled just how much things have changed in Washington since the immediate post-FTX period, when the SEC unleashed a wave of enforcement actions against crypto companies.
+**Why it matters:** The week signaled a major shift in the U.S. political establishment's posture toward crypto since the immediate post-FTX period.
 
-In the absence of new laws tailored to the crypto economy, the SEC was accused by insiders of practicing "rulemaking by enforcement." That is to say, it would bring legal actions against crypto entities under decades-old securities laws written for Wall Street, see what it could get federal judges to agree to in court, and thus set precedent governing the industry going forward.
+At the time, the SEC unleashed a wave of enforcement actions against crypto companies, even in the absence of new laws tailored specifically to the crypto economy.
 
-That approach garnered [a mixed record](https://www.msn.com/en-us/money/other/court-rules-in-favor-of-grayscale-over-sec-raising-hopes-for-bitcoin-etf-approval/ar-AA1fX1vy) in the courtroom and now seems to have dwindling political support on Capitol Hill as well.
+Industry insiders complained the agency was practicing "rulemaking by enforcement." That is to say, it would bring legal actions against crypto entities under decades-old securities laws written for Wall Street, see what it could get to stick in federal court, and thus set precedent governing the industry going forward.
 
-Reading between the lines, a few other importan lessons and trends that stand out to me right now:
+In retrospect, that approach garnered [a mixed record](https://www.msn.com/en-us/money/other/court-rules-in-favor-of-grayscale-over-sec-raising-hopes-for-bitcoin-etf-approval/ar-AA1fX1vy) in the courtroom and now seems to have dwindling political support on Capitol Hill as well. That means a lot of policy issues -- and new market opportunities -- are going to be up for grabs in 2024 and beyond.
 
-**1) The SEC's "war on crypto" has inadvertently had the effect of strengthening crypto's dominant duopoly of Bitcoin and Ethereum.**
+Another major lesson that jumps out for me: Ultimately, the SEC's post-FTX "war on crypto" seems to have inadvertently strengthened crypto's dominant duopoly of Bitcoin and Ethereum.
 
-Market dominance TKTKTK.
+The top two tokens' combined share of the global crypto market was just under 60% in early November 2022, when FTX went under, according to [CoinMarketCap data](https://coinmarketcap.com/charts/#bitcoin-dominance).
 
-**2) The public is mostly tuned out.**
+Now, after all the SEC prosecutions and civil actions in the years since, that figure has risen above 70%, and both tokens are probably going to have ETFs listed in the same Wall Street venues where the public goes to buy shares in General Motors.
 
-TKTKT Fed survey numbers.
+[TL;DR](https://www.urbandictionary.com/define.php?term=tl%3Bdr) version: This is what a policy utterly backfiring looks like in Washington.
 
-**3) Increased donations and lobbying are paying off for the industry.**
+If you look closer, it does make a perverse sort of sense, though. Many of the SEC's actions against the crypto industry have either directly targeted, or at least had a chilling effect, on smaller token projects. Some of them, no doubt, richly [deserved it](https://www.msn.com/en-us/money/companies/sec-alleges-multi-billion-dollar-crypto-fraud-by-terraform-labs-and-co-founder/ar-BB1kwcbu).
 
-Sadly, it's probably not coincidental that House passage of FIT21 follows an increase in campaign donations by crypto-related political action committees (PACs).
+But the crackdown has also led to a wave of [token de-listings](https://www.pymnts.com/cryptocurrency/2023/crypto-delistings-happening-at-record-clip-despite-bitcoin-comeback/) on crypto exchanges, including some projects that perhaps deserved to survive and could have offered legitimate innovation.   
 
-This is an awful game in Washington, but the crypto industry is clearly getting much better at it, for better or worse.
+In the meantime, the token market's two biggies just keep chugging along. And the market's ["long tail"](https://www.investopedia.com/terms/l/long-tail.asp) gets hollowed out.
 
-**4) Election-year politicking is helping, not hurting, crypto.**
+Frankly, I used to find this a bit  depressing. I used to think a truly flourishing token economy would comprise many different projects blooming at once, not such a concentration behind just two.
 
-Both major-party candidates are signaling detente with the industry.
+But I've since [made my peace](https://peteramckay.medium.com/public-blockchains-rock-afff96e35919) with with the two-headed Bitcoin/Ethereum beast, considering both networks are legitimately public, transparent, and open source. Innovators truly can build upon them without much worry.
 
-Robert F. Kennedy Jr. pro-bitcoin speech.
-
-https://www.politico.com/news/2024/05/23/crypto-2024-election-impact-00159506
-
-https://www.washingtonpost.com/business/2024/05/25/crypto-lobbying-politics-washington/
-
-https://www.coindesk.com/opinion/2024/05/24/the-unintended-consequences-of-fit21s-crypto-market-structure-bill/
-
-https://www.barrons.com/articles/bitcoin-ethereum-price-crypto-markets-today-adfbca77
-
-New op-ed co-written by Sheila Warren: https://fortune.com/crypto/2024/05/18/the-clock-is-ticking-for-democrats-on-crypto/
+That's more than we can say for all the disasters that Big Tech's proprietary apps and platforms hath wrought. And that's not nothing.
 
 ### Week in Review: May 19-25, 2024
 - **Grayscale Investments CEO Michael Sonnenshein stepped down.** Peter Mintzberg, who was global head for the crypto asset-management giant, will take over as chief executive. His work is cut out for him as Grayscale has recently seen heavy outflows of investor money into competitors' listed bitcoin funds. ([Wall Street Journal](https://www.wsj.com/finance/grayscale-ceo-michael-sonnenshein-steps-down-bc0680dc?st=7mrmyfcrcmjbann&reflink=desktopwebshare_permalink))
